reduce box header size and fix avatar alignment

--- a/src/main.css
+++ b/src/main.css
@@ -467,6 +467,18 @@
   .branch-action-state-unstable .branch-action-body::after {
     border-right-color: #181818;
   }
+  /* GitHub bug: Fix alignment of avatars in box headers */
+  .Box-header .Details .ml-n1 {
+    margin-left: 0 !important;
+    margin-right: -8px !important;
+  }
+  .Box-header .Details .ml-n1 {
+    margin-top: 0 !important;
+  }
+  /* Opinionated: Remove excessive box padding */
+  .Box-header, .Box-row, .Box-body {
+    padding: 8px 12px;
+  }
   .topic-tag {
     box-shadow: inset 0 0 0 1px #246 !important;
   }
